create books embeddings with open ai

--- a/notebooks/2_experiment_1_baseline_model.ipynb
+++ b/notebooks/2_experiment_1_baseline_model.ipynb
@@ -13,20 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "00b72b58",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pprint\n",
-    "import tempfile\n",
     "from ast import literal_eval\n",
-    "from typing import Dict, Text\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds\n",
     "import tensorflow_recommenders as tfrs"
    ]
   },
@@ -341,136 +337,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "565154d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>book_id</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>810666</th>\n",
-       "      <td>4668</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>810795</th>\n",
-       "      <td>927</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>824153</th>\n",
-       "      <td>6397</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>827860</th>\n",
-       "      <td>6548</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>830096</th>\n",
-       "      <td>2750</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5759551</th>\n",
-       "      <td>22360</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5769814</th>\n",
-       "      <td>13990</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5842459</th>\n",
-       "      <td>24615</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5905667</th>\n",
-       "      <td>47930</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5924641</th>\n",
-       "      <td>35560</td>\n",
-       "      <td>9999</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>130 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         user_id  book_id  rating\n",
-       "810666      4668     9999       1\n",
-       "810795       927     9999       5\n",
-       "824153      6397     9999       3\n",
-       "827860      6548     9999       2\n",
-       "830096      2750     9999       4\n",
-       "...          ...      ...     ...\n",
-       "5759551    22360     9999       4\n",
-       "5769814    13990     9999       3\n",
-       "5842459    24615     9999       5\n",
-       "5905667    47930     9999       4\n",
-       "5924641    35560     9999       2\n",
-       "\n",
-       "[130 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings[ratings[\"book_id\"] == 9999]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "3eba46d1",
    "metadata": {},
@@ -647,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "17f070f8",
    "metadata": {},
    "outputs": [],
@@ -666,9 +532,9 @@
     "            ),\n",
     "            tf.keras.layers.Embedding(\n",
     "                input_dim=num_tokens + 1,\n",
-    "                output_dim=embedding_matrix.shape[1],  # 1536 for OpenAI embeddings\n",
+    "                output_dim=embedding_matrix.shape[1],  \n",
     "                embeddings_initializer=tf.keras.initializers.Constant(embedding_matrix),\n",
-    "                trainable=False,  # freeze OpenAI vectors\n",
+    "                trainable=False,  \n",
     "            )\n",
     "        ])\n",
     "        \n",
@@ -751,12 +617,12 @@
    "id": "332853c0",
    "metadata": {},
    "source": [
-    "TWO TOWER MODEL"
+    "**Two Tower Model**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4904d10c",
    "metadata": {},
    "outputs": [],
@@ -817,7 +683,7 @@
     "train_data = tf.data.Dataset.from_tensor_slices({\n",
     "    \"book_history\": [[\"b1\", \"b2\"]],\n",
     "    \"history_ratings\": [[5.0, 4.0]],\n",
-    "    \"book_id\": [\"b3\"],   # book user actually watched next\n",
+    "    \"book_id\": [\"b3\"],  \n",
     "}).batch(1)\n",
     "\n",
     "model.compile(optimizer=tf.keras.optimizers.Adagrad(0.1))\n",
