--- a/notebooks/1_Preprocessing_&_EDA.ipynb
+++ b/notebooks/1_Preprocessing_&_EDA.ipynb
@@ -814,7 +814,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.10.17)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
